--- a/campaign/templates/app/messages.html
+++ b/campaign/templates/app/messages.html
@@ -324,7 +324,7 @@ function clearMessageFilters() {
 
 // Action functions
 function editMessage(id) {
-    window.location.href = `/messages/${id}/edit/`;
+    window.location.href = `/campaign/messages/edit/${id}`;
 }
 
 function addNewMessage() {
