--- a/campaign/templates/components/modals.html
+++ b/campaign/templates/components/modals.html
@@ -137,7 +137,7 @@ window.ModalSystem = {
     // Show success toast (non-blocking)
     toast: function(message, type = 'success') {
         const toast = document.createElement('div');
-        toast.className = 'toast toast-top toast-end z-50';
+        toast.className = 'toast toast-top toast-center z-50';
         
         const alertClass = type === 'error' ? 'alert-error' : 
                           type === 'warning' ? 'alert-warning' : 
@@ -150,7 +150,7 @@ window.ModalSystem = {
         toast.innerHTML = `
             <div class="alert ${alertClass}">
                 <i class="fa-solid ${icon}"></i>
-                <span>${message}</span>
+                <span">${message}</span>
             </div>
         `;
         
